[package]
name = "twincord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
thiserror = "1.0.40"
rand = "0.8.5"
